--- a/bot/package.json
+++ b/bot/package.json
@@ -20,12 +20,14 @@
     "glob": "^8.0.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
+    "timed-cache": "^2.0.0",
     "typedi": "^0.10.0",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
     "@types/node": "^18.6.3",
+    "@types/timed-cache": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
