--- a/bot/package.json
+++ b/bot/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "dependencies": {
     "@discordjs/rest": "^1.0.1",
+    "@sentry/node": "^7.54.0",
     "bunyan": "^1.8.15",
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.1",
@@ -25,6 +26,7 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@sentry/types": "^7.54.0",
     "@types/bunyan": "^1.8.8",
     "@types/node": "^18.6.3",
     "@types/timed-cache": "^2.0.1",
